Push the chrome browser of the selected tab to the front of the screen,

BUG=605340

Review-Url: https://codereview.chromium.org/2035863002
Cr-Commit-Position: refs/heads/master@{#397765}

Former-commit-id: 3cd3d02c94561d4e8646c23fd1b636eac60b6731